Adding to Shackle essay.

--- a/AntiRats2/makefile
+++ b/AntiRats2/makefile
@@ -12,9 +12,13 @@ HTMLFILES = $(shell ls $(PTML_DIR)/*.ptml | sed -e 's/.ptml/.html/' | sed -e 's/
 	$(UTILS_DIR)/html_include.awk <$< >$@
 	git add $@
 
-local: $(HTMLFILES)
+local: $(HTMLFILES) md2html
 
-prod: $(INCS) $(HTMLFILES)
+md2html:
+	pandoc -f markdown-smart -t html -o Shackle.html FirstDrafts/shackle.md
+	pandoc -f markdown-smart -t html -o Intro.html FirstDrafts/intro.md
+
+prod: local
 	-git commit -a 
 	git pull origin master
 	git push origin master
