--- a/AntiRats2/makefile
+++ b/AntiRats2/makefile
@@ -1,7 +1,7 @@
 # Need to export as ENV var
 export TEMPLATE_DIR = templates
 PTML_DIR = html_src
-UTILS_DIR = ../utils
+UTILS_DIR = ../AntiRats/utils
 
 INCS = $(TEMPLATE_DIR)/head.txt $(TEMPLATE_DIR)/logo.txt $(TEMPLATE_DIR)/menu.txt
 
